--- a/app/views/admins/articles/index.html.erb
+++ b/app/views/admins/articles/index.html.erb
@@ -1,51 +1,4 @@
-<div class = "content">
-  <table class="table table-dark table-responsiv">
-    <thead>
-      <tr>
-        <th scope="col">着用メンバー</th>
-        <th scope="col">ブランド</th>
-        <th scope="col">値段</th>
-        <th scope="col">アイテム</th>
-        <th scope="col">url</th>
-        <th scope="col">画像</th>
-        <th scope="col">詳細</th>
-        <th scope="col">編集</th>
-      </tr>
-      <% @articles.each do |article| %>
-        <% names = [] %>
-        <% article.members.each do |member|%>
-          <% names.push(member.name) %>
-        <% end %>
-        <tr>
-          <td scope="row"><%= "#{names.join("さん")}さん" %></td>
-          <td><%= article.brand %></td>
-          <td><%= article.price %></td>
-          <td><%= article.item%></td>
-          <% if article.tweet_url.present? %>
-            <td>あり</td>
-          <% else %>
-            <td>なし</td>
-          <% end %>
-          <td><%= "#{article.images.count}枚" %></td>
-          <%
-=begin%>
- <td><%= link_to "詳細", article_path(article.id), class: "btn btn-outline-light" %></td> 
-<%
-=end%>
-
-<td><%= button_to "詳細", article_path(article.id), method: :get, class: "btn btn-outline-light admin_show_btn", id: "admin_show_btn_#{article.id}"%></td>
-
-          <% if logged_in? && current_user.admin? %> 
-          <td><%= button_to "編集", edit_admins_article_path(article.id), method: :get, class: "btn btn-outline-light admin_edit_btn", id: "admin_edit_btn_#{article.id}" %></td>
-            <%
-=begin%>
- <td><%= link_to "編集", edit_admins_article_path(article.id), class: "btn btn-outline-light" %></td> 
-<%
-=end%>
-          <% end %>
-        </tr>
-      <% end %>
-    </thead>
-  </table>
-  <%= paginate @articles %>
+<div class = "content pb-6 pt-4 mb-4">
+  <h2>Admins/ITEM</h2>
+  <%= render 'form' %>
 </div>
