--- a/app/views/articles/line.html.erb
+++ b/app/views/articles/line.html.erb
@@ -1,61 +1,48 @@
-<div>
-  <div class = "line mt-5 text-center">
-    <p>Twitterで私物の特定のツイートがされた際に、LINEでお知らせをお送りします。<br>お知らせからTweetに飛ぶことが可能です。<br>全員の私物をお知らせするチャネルと個人のチャネルがございます。<br>下記からご登録ください。</p>
-    <div class = "row justify-content-center">
-      <div class="card col-2 border-white border-1 rounded-0 text-dark bg-white py-2 mx-3 mt-3 mb-3" style="width: 23rem; height: 28rem;">
+<div class = "content pb-4 pt-4">
+  <h2> LINE PAGE</h2>
+  <div class = "line mt-4">
+    <p>Twitterで私物特定のツイートがされた際に、LINEでお知らせをお送りします。<br>全員の私物をお知らせするチャネルと個人のチャネルがございます。<br>ぜひご登録ください。</p>
+    <div class = "container row justify-content-center">
+      <div class="card line_card col-xs-12 col-md-6 col-lg-3 border-dark border-1 rounded-3 mr-5 mx-3 mt-3 mb-3" style="width: 14.5rem; height: 14.5rem;">
         <div class="card-body">
-          <%= image_tag 'line_all.jpg', size:"300x300"%>
-          <div class="card-body-text mt-4 text-center">
-            <p>全員の私物が特定された際に通知が送られます。</p>
-          </div>
+          <h6 class = "pt-2">ST</h6>
+          <%= image_tag 'line_all.jpg', size:"160x160"%>
         </div>
       </div>
-      <div class="card col-2 border-white border-1 rounded-0 text-dark  py-2 mx-3 mt-3 mb-3" style="width: 23rem; height: 28rem;">
+      <div class="card line_card col-xs-12 col-md-6 col-lg-3 border-dark border-1 rounded-3 mx-3 mt-3 mb-3" style="width: 14.5rem; height: 14.5rem;">
         <div class="card-body">
-          <%= image_tag 'line_yugo.jpg', size:"300x300"%>
-          <div class="card-body-text mt-4 text-center">
-            <p>髙地優吾さんの私物が特定された際に通知が送られます。</p>
-          </div>
+          <h6 class = "pt-2">KY</h6>
+          <%= image_tag 'line_yugo.jpg', size:"160x160"%>
         </div>
       </div>
-      <div class="card col-2 border-white border-1 rounded-0 text-dark bg-white py-2 mx-3 mt-3 mb-3" style="width: 23rem; height: 28rem;">
+      <div class="card line_card col-xs-12 col-md-6 col-lg-3 border-dark border-1 rounded-3 mx-3 mt-3 mb-3" style="width: 14.5rem; height: 14.5rem;">
         <div class="card-body">
-          <%= image_tag 'line_taiga.jpg', size:"300x300"%>
-          <div class="card-body-text mt-4 text-center">
-            <p>京本大我さんの私物が特定された際に通知が送られます。</p>
-          </div>
+          <h6 class = "pt-2">KT</h6>
+          <%= image_tag 'line_taiga.jpg', size:"160x160"%>
         </div>
       </div>
-      <div class="card col-2 border border-white border-1 rounded-0 text-dark bg-white py-2 mx-3 mt-3 mb-3" style="width: 23rem; height: 28rem;">
+      <div class="card line_card col-xs-12 col-md-6 col-lg-3 border-dark border-1 rounded-3 mx-3 mt-3 mb-3" style="width: 14.5rem; height: 14.5rem;">
         <div class="card-body">
-          <%= image_tag 'line_juri.jpg', size:"300x300"%>
-            <div class="card-body-text mt-4 text-center">
-              <p>田中樹さんの私物が特定された際に通知が送られます。</p>
-            </div>
+          <h6 class = "pt-2">TJ</h6>
+          <%= image_tag 'line_juri.jpg', size:"160x160"%>
         </div>
       </div>
-      <div class="card col-2 border-white border-1 rounded-0 text-dark bg-white py-2 mx-3 mt-3 mb-3" style="width: 23rem; height: 28rem;">
-        <div class="card-body">
-          <%= image_tag 'line_hokuto.jpg', size:"300x300"%>
-          <div class="card-body-text mt-4 text-center">
-            <p>松村北斗さんの私物が特定された際に通知が送られます。</p>
-          </div>
+      <div class="card line_card col-xs-12 col-md-6 col-lg-3 border-dark border-1 rounded-3 mx-3 mt-3 mb-3" style="width: 14.5rem; height: 14.5rem;">
+        <div class="card-body mx-auto">
+          <h6 class = "pt-2">MH</h6>
+          <%= image_tag 'line_hokuto.jpg', size:"160x160"%>
         </div>
       </div>
-      <div class="card col-2 border-white border-2 rounded-0 text-dark bg-white py-2 mx-3 mt-3 mb-3" style="width: 23rem; height: 28rem;">
+      <div class="card line_card col-xs-12 col-md-6 col-lg-3 border-dark border-1 rounded-3 mx-3 mt-3 mb-3" style="width: 14.5rem; height: 14.5rem;">
         <div class="card-body">
-          <%= image_tag 'line_jesse.jpg', size:"300x300"%>
-          <div class="card-body-text mt-4 text-center">
-            <p>ジェシーさんの私物が特定された際に通知が送られます。</p>
-          </div>
+          <h6  class = "pt-2">　J　</h6>
+          <%= image_tag 'line_jesse.jpg', size:"160x160"%>
         </div>
       </div>
-      <div class="card col-2 border-success border-white rounded-6 text-dark bg-white py-2 mx-3 mt-3 mb-3" style="width: 23rem; height: 28rem;">
+      <div class="card line_card col-xs-12 col-md-6 col-lg-3 border-dark border-1 rounded-3 mx-3 mt-3 mb-3" style="width: 14.5rem; height: 14.5rem;">
         <div class="card-body">
-          <%= image_tag 'line_shintarou.jpg', size:"300x300"%>
-          <div class="card-body-text mt-4 text-center">
-            <p>森本慎太郎さんの私物が特定された際に通知が送られます。</p>
-          </div>
+          <h6  class = "pt-2">SM</h6>
+          <%= image_tag 'line_shintarou.jpg', size:"160x160"%>
         </div>
       </div>
     </div>
