--- a/app/views/reports/new.html.erb
+++ b/app/views/reports/new.html.erb
@@ -1,12 +1,16 @@
-<% breadcrumb :new_report %>
-<div class = "content">
-  <div class="mb-3">
+<div class = "content pb-4 pt-4 text-center">
+  <h2> REPORT</h2>
+  <div class = "line mt-4 text-center">
     <%= form_with model: @report, local: true do |f| %>
-      <%= f.label :comment, "Report", class: "form-label fs-3 mb-4" %>
+      <%
+=begin%>
+ <%= f.label :comment, t('.title'), class: "form-label fs-3 mb-4" %> 
+<%
+=end%>
       <p>記事や通知に間違い等あればこちらからコメントしてください。<br>メンバー名など細かく記入して頂けますとスムーズに対応させていただくことが可能です。</p>
-      <%= f.text_area :comment, placeholder: "例)京本くんの最新の記事のブランド名が間違っています。", class: "form-control py-3 mt-5 mb-5 bg-white border-white border-1 rounded-0 text-dark", rows: "6"%>
+      <%= f.text_area :comment, placeholder: "例)京本くんの最新の記事のブランド名が間違っています。", class: "form-control py-3 mt-5 mb-5 bg-white border-dark border-1 rounded-3 text-dark", rows: "6"%>
       <div class = "text-center">
-        <%= f.submit '送信', class: "btn btn-outline-light" %>
+        <%= f.submit t('defaults.submit'), class: "btn btn-coler btn-outline-dark" %>
       </div>
     <% end %>
   </div>
