--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,52 +11,280 @@
  * It is generally better to create a new file per style scope.
  *
  */
- @import "bootstrap";
+ @import 'bootstrap';
+@import url('https://fonts.googleapis.com/css2?family=Allura&family=Bonheur+Royale&family=Sacramento&family=Scheherazade+New&family=Tangerine:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Noto+Serif+JP');
+@import url('https://fonts.googleapis.com/css2?family=Allura&family=Bonheur+Royale&family=Sacramento&family=Tangerine:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Allura&family=Bonheur+Royale&family=Montserrat:wght@300&family=Sacramento&family=Scheherazade+New&family=Tangerine:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Allura&family=Bonheur+Royale&family=Lato:wght@700&family=Montserrat:wght@300&family=Sacramento&family=Scheherazade+New&family=Tangerine:wght@700&display=swap');
 
- .notification{
-  background-color: #999999;
-  color: white;
-  font-size: 1rem;
+.title h1 {
+  font-family: 'Scheherazade New', serif;
 }
+
+ .title h3, .logo  {
+  font-family: 'Bonheur Royale', cursive;
+ }
+
+ .content h2, h3, h6,.home_btn,  .header .search_btn  {
+  font-family: 'Noto Serif JP', sans-serif; 
+ }
+
+body p {
+  font-family: 'Montserrat', sans-serif;
+}
+
 
  body{
-   margin: 0;
-   background: #111111;
-   position: relative;
-   color: white;
+    margin: 0;
+    background: white;
+    min-height:600px;
+    color: black;
+    height: 100vh;
  }
 
- .content{
-  min-height:450px;
-  height:auto !important;
-  height:4500px;
+  .content{
+  min-height:550px;
+  // height:auto !important;
+  width: 100%;
+  text-align: center;
+  justify-content: center;
  }
 
-// .img-hidden {　これimageに使用する？
-//   height: 500px;
-//   overflow: hidden;
-// }
+ .login-page{
+  min-height:550px;
+  // height:auto !important;
+  width: 100%;
+ }
 
-.pagination>li>a {          
-  border: none;     
-  color: #696969;   
+
+ .cover{
+   background-image: image-url('top_image2.jpg');
+   width: 100%;
+    height: 0;
+    /* (画像の高さ / 画像の横幅) × 100 */
+    padding-top: 50%;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    position: relative;
 }
 
-.pagination>.active>a {     
-  background: #93c9ff;     
-  border-radius: 15px;     
+.cover h1{
+  // color: white;
+  position: absolute;
+  top: 17%;
+  left: 33%;
+  // font-size: 7.5vw;
+  font-size: 9vw;
+  font-weight: bold;
+}
+
+.cover h3{
+  position: absolute;
+  top: 70%;
+  left: 40%;
+  font-size: 2.5vw;
+}
+
+.introduction{
+  width: 85%;
+}
+
+.home_btn{
+  background-color: #FCE3E7 ;
+  color: #770022;
+}
+
+.card-body{
+  position: relative;
+}
+
+.new_btn{
+  background-color: #FDF5E6;
+  border-radius: 50px;
+  color: #111111;
+  width: 13%;
+  height: 6%;
+  position: absolute;
+  top: 8%;
+  left: 10%;
+}
+
+.line_card h6 {
+  position: relative;
+  display: inline-block;
+  margin-bottom: 1em;
+}
+.line_card h6:before {
+  content: '';
+  position: absolute;
+  bottom: -15px;
+  display: inline-block;
+  width: 30px;
+  height: 2px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+  background-color: black;
+  border-radius: 0px;
+}
+
+
+.mark-box {
+  position: relative;
+}
+
+.mark-box:before {
+  position: absolute;
+  content: "";
+  left: 0;
+  top: 0;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 50px 50px 0 0;
+  border-color: #f00 transparent transparent transparent;
+}
+.mark-box:after {
+  position: absolute;
+  content: "NEW";
+  transform: rotate(315deg);
+  display: block;
+  font-size: 11px;
+  white-space: pre;
+  color: #fff;
+  top: 12px;
+  left: 4px;
+  text-align: center;
+  z-index: 2;
+  line-height: 1.2;
+}
+
+
+input[type="search"]:hover{
+  background-color: #FCE3E7;
+  color: #111111;
+}
+input[type="search"]::after{
+  transition: 0.5s;
+  background-color: #FCE3E7;
+}
+
+.search_btn:hover {
+  background-color: #FCE3E7;
+  color: #111111;
+}
+
+.search_btn::after {
+  transition: 0.5s;
+  background-color: #FCE3E7;
+}
+
+
+.pagination{
+  margin: 20px auto 0;
+  width: 50%;
+  display: flex;
+  justify-content: center;
+}
+.pagination>li>a {          
+  border: none;
+  color: #770022;
+}
+
+.pagination>.active>.page-link {     
+  background-color: #FCE3E7;
+  border-radius: 30px;
 }
 
 .pagination>li>a:hover {        
-  border-radius: 15px;   
+  border-radius: 30px;
+  background-color: #FCE3E7;
+  color: #770022;
 }
 
-.pagination {
-  justify-content: center;
+.footer_text {
+  color: #999999;
+}
+
+.colortest{
+  background-color: #fff;
 }
 
 
-a {
-  color:white;
-  text-decoration:underline;
+@media screen and (min-width:480px) {
+  body {
+    // color: #FF0000;
   }
+  .card-text {
+    font-size: 1.1rem;
+  }
+  // .cover h1{
+  //   font-size: 6.5vw;
+  // }
+  .home_btn{
+    width: 60%;
+    line-height: 250%;
+  }
+  .btn-coler {
+    background-color: #FCE3E7;
+    width: 55%;
+    line-height: 200%;
+  }
+  .btn-coler:hover {
+    background-color: #FCE3E7;
+    color: #111111;
+  }
+  
+  
+}
+
+@media screen and (min-width:768px) and (max-width:1024px) {
+  body {
+    // color: #FFFF00;
+  }
+  .card-text {
+    font-size: 1.4rem;
+  }
+
+  .home_btn{
+    width: 45%;
+  }
+
+  .btn-coler {
+    background-color: #FCE3E7;
+    width: 50%;
+    line-height: 250%;
+  }
+  .btn-coler:hover {
+    background-color: #FCE3E7;
+    color: #111111;
+  }
+  
+  
+}
+
+@media screen and (min-width: 1024px) {
+  body {
+    // color: #800080;
+  }
+  .card-text {
+    font-size: 1.4rem;
+  }
+
+  .home_btn{
+    width: 20%;
+  }
+  .btn-coler {
+    background-color: #FCE3E7;
+    color: #111111;
+    width: 30%;
+    line-height: 200%;
+  }
+  .btn-coler:hover {
+    transition: 0.5s;
+    background-color: #FCE3E7;
+  }
+  
+}
