--- a/app/views/admins/articles/search.html.erb
+++ b/app/views/admins/articles/search.html.erb
@@ -1,39 +1,6 @@
 <div class = "content">
-  <table class="table table-dark">
-    <thead>
-      <tr>
-        <th scope="col">着用メンバー</th>
-        <th scope="col">ブランド</th>
-        <th scope="col">値段</th>
-        <th scope="col">アイテム</th>
-        <th scope="col">twitterのurl</th>
-        <th scope="col">画像数</th>
-        <th scope="col">詳細</th>
-        <th scope="col">編集</th>
-      </tr>
-      <% @articles.each do |article| %>
-        <% names = [] %>
-        <% article.members.each do |member|%>
-          <% names.push(member.name) %>
-        <% end %>
-        <tr>
-          <td scope="row"><%= "#{names.join("さん")}さん" %></td>
-          <td><%= article.brand %></td>
-          <td><%= article.price %></td>
-          <td><%= article.item%></td>
-          <% if article.tweet_url.present? %>
-            <td>あり</td>
-          <% else %>
-            <td>なし</td>
-          <% end %>
-          <td><%= "#{article.images.count}枚" %></td>
-          <td><%= link_to "詳細", article_path(article.id), class: "btn btn-outline-light" %></td>
-          <% if logged_in? && current_user.admin? %> 
-            <td><%= link_to "編集", edit_admins_article_path(article.id), class: "btn btn-outline-light " %></td>
-          <% end %>
-        </tr>
-      <% end %>
-    </thead>
-  </table>
-<%= paginate @articles%>
+  <%= render 'form' %>
+<% if @articles.count == 0 %>
+    <h5><%= t('.no_result') %></h5>
+<%end%>
 </div>
