--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -25,10 +25,10 @@
                 </li>
                 <% if logged_in? %>
                   <li class="nav-item">
-                    <a class="nav-link" href="/admins/reports">Admin/REPORT</a>
+                    <a class="nav-link" href="/admins/reports">Admins/REPORT</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/admins/articles">Admin/ITEM</a>
+                    <a class="nav-link" href="/admins/articles">Admins/ITEM</a>
                   </li>
                   <li class="nav-item">
                     <%= link_to t('defaults.logout'), admins_logout_path, class: "nav-link", method: :delete %>
