--- a/app/views/admins/articles/_form.html.erb
+++ b/app/views/admins/articles/_form.html.erb
@@ -20,9 +20,9 @@
         <td><%= "#{article.images.count}枚" %></td>
         <td><%= "#{article.created_at.strftime("%Y/%m/%d")}" %></td>
         <td><%= "#{article.status_i18n}" %></td>
-        <td><%= link_to t('defaults.show'), article_path(article.id), class: "btn btn-outline-dark search_btn" %></td>
+        <td><%= link_to t('defaults.show'), article_path(article.id), class: "btn btn-outline-dark search_btn", id: "admin_show_btn_#{article.id}" %></td>
         <% if logged_in? && current_user.admin? %> 
-          <td><%= link_to t('defaults.edit'), edit_admins_article_path(article.id), class: "btn btn-outline-dark search_btn" %></td>
+          <td><%= link_to t('defaults.edit'), edit_admins_article_path(article.id), class: "btn btn-outline-dark search_btn", id: "admin_edit_btn_#{article.id}" %></td>
         <% end %>
       </tr>
     <% end %>
