--- a/app/views/admins/reports/index.html.erb
+++ b/app/views/admins/reports/index.html.erb
@@ -12,7 +12,7 @@
           <td><%= report.comment %></td>
           <td  class = "text-center"><%= report.created_at.strftime('%Y/%m/%d') %></td>
           <% if logged_in? && current_user.admin? %> 
-            <td  class = "text-center" ><%= link_to t('defaults.delete'), admins_report_path(report.id), class: "btn btn-outline-dark search_btn", method: :delete, data: { confirm: '削除しますか' } %></td>
+            <td  class = "text-center" ><%= link_to t('defaults.delete'), admins_report_path(report.id), class: "btn btn-outline-dark search_btn", method: :delete, data: { confirm: '削除しますか？' } %></td>
           <% end %>
         </tr>
       <% end %>
